--- a/Murn-27201103-2023.tex
+++ b/Murn-27201103-2023.tex
@@ -365,14 +365,24 @@ d_{G[H]}(v_{ij}, v_{rs}) = \begin{cases}
     \end{cases}
 $$ 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Metrična dimenzija leksikografskega produkta grafov}
-Decembra leta 2010 sta v razmaku 17 dni nastala dva različna članka na temo metrične dimenzije leksikografskega produkta grafov. 
-Avtorji so se lotili teme s povsem različnima pristopoma, v tem diplomskem seminarju pa bomo povzeli rezultate obeh in poskusili poiskati povezavo med njimi.  
+Decembra leta 2010 sta v razmaku 17 dni nastala dva različna članka na temo metrične 
+dimenzije leksikografskega produkta grafov. Avtorji so se lotili teme s povsem različnima 
+pristopoma, v tem diplomskem seminarju pa bomo povzeli rezultate obeh in 
+poskusili poiskati povezavo med njimi. 
+
+Obravnavamo leksikografske produkte $G[H]$, kjer je $G$ povezan graf in $H$ pojuben graf. 
 
 \subsection{Metrična dimenzija in komponente}
+Komponenta grafa je povezan podgraf, ki ni del nobenega večjega povezanega 
+podgrafa. 
+%povezani graf ima samo eno komponento. 
 
+
+%In graph theory, a component of an undirected graph is a connected 
+%subgraph that is not part of any larger connected subgraph. 
 
 \subsection{Metrična dimenzija, sosedska dimenzija in dvojčki}
 
